force-app/main/default/objects/Vulnerable_Form__c/Vulnerable_Form__c.object-meta.xml
<CustomObject>
    <label>Vulnerable Form</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Vulnerable Form Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vulnerable Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>