force-app/main/default/objects/Vulnerable_Form__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Belfast</fullName>
            </value>
            <value>
                <fullName>Birmingham</fullName>
            </value>
            <value>
                <fullName>Bristol</fullName>
            </value>
            <value>
                <fullName>Cambridge</fullName>
            </value>
            <value>
                <fullName>Cardiff</fullName>
            </value>
            <value>
                <fullName>Chester</fullName>
            </value>
            <value>
                <fullName>Doncaster</fullName>
            </value>
            <value>
                <fullName>Edinburgh</fullName>
            </value>
            <value>
                <fullName>Glasgow</fullName>
            </value>
            <value>
                <fullName>Lancaster</fullName>
            </value>
            <value>
                <fullName>Leeds</fullName>
            </value>
            <value>
                <fullName>Leicester</fullName>
            </value>
            <value>
                <fullName>Liverpool</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Manchester</fullName>
            </value>
            <value>
                <fullName>Nottingham</fullName>
            </value>
            <value>
                <fullName>Oxford</fullName>
            </value>
            <value>
                <fullName>Preston</fullName>
            </value>
            <value>
                <fullName>Salford</fullName>
            </value>
            <value>
                <fullName>Swansea</fullName>
            </value>
            <value>
                <fullName>Westminster</fullName>
            </value>
            <value>
                <fullName>York</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>