force-app/main/default/objects/Vulnerable_Form__c/fields/Consent_Given__c.field-meta.xml
<CustomField>
    <fullName>Consent_Given__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I have read the information above and have given the consent to share my details with the finance institution</description>
    <label>Consent Given</label>
    <type>Checkbox</type>
</CustomField>