force-app/main/default/objects/Vulnerable_Form__c/fields/Details_of_Vulnerability__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Vulnerability__c</fullName>
    <label>Details of Vulnerability</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>