force-app/main/default/objects/Vulnerable_Form__c/fields/Nature_of_Vulnerability__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Vulnerability__c</fullName>
    <label>Nature of Vulnerability</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Life_Events</fullName>
                <label>Life Events</label>
            </value>
            <value>
                <fullName>Resilience</fullName>
            </value>
            <value>
                <fullName>Capability</fullName>
            </value>
            <value>
                <fullName>Null</fullName>
                <default>true</default>
                <label>Null</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>