force-app/main/default/objects/Vulnerable_Form__c/fields/VulnerabilityLevel__c.field-meta.xml
<CustomField>
    <fullName>VulnerabilityLevel__c</fullName>
    <label>VulnerabilityLevel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Vulnerable</fullName>
            </value>
            <value>
                <fullName>Vulnerable</fullName>
            </value>
            <value>
                <fullName>Highly Vulnerable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>