force-app/main/default/objects/Vulnerable_Form__c/validationRules/ConsentMustBeGiven.validationRule-meta.xml
<ValidationRule>
    <fullName>ConsentMustBeGiven</fullName>
    <active>true</active>
    <errorConditionFormula>!Consent_Given__c</errorConditionFormula>
    <errorDisplayField>Consent_Given__c</errorDisplayField>
    <errorMessage>Consent of the customer must be given to share any details of the vulnerability with the finance institution</errorMessage>
</ValidationRule>